--- a/test.html
+++ b/test.html
@@ -7,7 +7,7 @@
 <body>
 	<style>
 		#btn{
-			width: 200px;
+			width: 100%;
 			height: 100px;
 			border:1px solid #23e34c;
 			text-align: center;
@@ -24,10 +24,14 @@
 		}
 
 		var u = navigator.userAgent;
+		btn.innerHTML = u;
         var isAndroid = u.indexOf('Android') > -1 || u.indexOf('Adr') > -1; //android终端
         var isiOS = !!u.match(/\(i[^;]+;( U;)? CPU.+Mac OS X/); //ios终端
-        alert('是否是Android：'+isAndroid);
+        setTimeout(function(){
+        	alert('是否是Android：'+isAndroid);
         alert('是否是iOS：'+isiOS);
+    },1000)
+        
 </script>
 </body>
 </html>
