--- a/test.html
+++ b/test.html
@@ -11,7 +11,9 @@
 <div class="wrap">
 <div id="btn">点击测试浏览器环境</div>
 <div ng-click="clickError()"></div>
-<div class="form"><input type="text" id="forminput"></div>
+<div class="form">
+	<input type="text" id="forminput">
+</div>
 <div class="tijiao" ng-click="tijiao()">点击提交</div>
 </div>
 	
