--- a/test.html
+++ b/test.html
@@ -1,25 +1,59 @@
-<!DOCTYPE html>
-<html lang="en" ng-app="testApp">
+<!doctype html>
+<html>
+
 <head>
-	<meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-	<title>android or ios</title>
-	<link rel="stylesheet" href="./css/index.css">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-status-bar-style" content="black" />
+
+	<title>this's a demo</title>
+	<meta id="viewport" name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,minimal-ui">
 </head>
-<body ng-controller="testAppController">
 
-<div class="wrap">
-<div id="btn">点击测试浏览器环境</div>
-<div ng-click="clickError()"></div>
-<div class="form">
-	<input type="text" id="forminput">
-</div>
-<div class="tijiao" ng-click="tijiao()">点击提交</div>
-</div>
-	
+<body>
+	<div>
+		<a id="J-call-app" href="javascript:;" class="label">立即打开&gt;&gt;</a>
+		<input id="J-download-app" type="hidden" name="storeurl" value="http://m.chanyouji.cn/apk/chanyouji-2.2.0.apk">
+	</div>
+	<div>
+		<a id="J-call-app" href="suhang://test/" class="label">立即打开&gt;&gt;</a>
+	</div>
 
-<script src="https://cdn.bootcss.com/jquery/2.2.4/jquery.js"></script>
-<script src="https://cdn.bootcss.com/angular.js/1.6.0/angular.js"></script>
-<script src="./js/index.js"></script>
+	<script>
+		(function () {
+			var ua = navigator.userAgent.toLowerCase();
+			var t;
+			var config = {
+				/*scheme:必须*/
+				scheme_IOS: 'will://',
+				scheme_Adr: 'suhang://test/',
+				download_url: document.getElementById('J-download-app').value,
+				timeout: 600
+			};
+			function openclient() {
+				var startTime = Date.now();
+				var ifr = document.createElement('iframe');
+				ifr.src = ua.indexOf('os') > 0 ? config.scheme_IOS : config.scheme_Adr;
+				ifr.style.display = 'none';
+				document.body.appendChild(ifr);
+				var t = setTimeout(function () {
+					var endTime = Date.now();
+					if (!startTime || endTime - startTime < config.timeout + 200) {
+						window.location = config.download_url;
+					} else {
+
+					}
+				}, config.timeout);
+				window.onblur = function () {
+					clearTimeout(t);
+				}
+			}
+			window.addEventListener("DOMContentLoaded", function () {
+				document.getElementById("J-call-app").addEventListener('click', openclient, false);
+			}, false);
+		})()
+	</script>
 </body>
+
 </html>
