--- a/test.html
+++ b/test.html
@@ -14,10 +14,13 @@
 <body>
 	<div>
 		<a id="J-call-app" href="javascript:;" class="label">立即打开&gt;&gt;</a>
-		<input id="J-download-app" type="hidden" name="storeurl" value="http://m.chanyouji.cn/apk/chanyouji-2.2.0.apk">
+		<!--<input id="J-download-app" type="hidden" name="storeurl" value="http://m.chanyouji.cn/apk/chanyouji-2.2.0.apk">-->
 	</div>
 	<div>
-		<a id="J-call-app" href="suhang://test/" class="label">立即打开&gt;&gt;</a>
+		<a id="J-call-app" href="suhang://test/" class="label">立即打开android&gt;&gt;</a>
+	</div>
+	<div>
+		<a id="J-call-app" href="huizuche://" class="label">立即打开ios&gt;&gt;</a>
 	</div>
 
 	<script>
