--- a/test.html
+++ b/test.html
@@ -14,22 +14,23 @@
 <body>
 	<div>
 		<a id="J-call-app" href="javascript:;" class="label">立即打开&gt;&gt;</a>
-		<!--<input id="J-download-app" type="hidden" name="storeurl" value="http://m.chanyouji.cn/apk/chanyouji-2.2.0.apk">-->
+		<input id="J-download-app" type="hidden" name="storeurl" value="http://m.chanyouji.cn/apk/chanyouji-2.2.0.apk">
 	</div>
 	<div>
-		<a id="J-call-app" href="suhang://test/" class="label">立即打开android&gt;&gt;</a>
+		<a href="suhang://test/" class="label">立即打开android&gt;&gt;</a>
 	</div>
 	<div>
-		<a id="J-call-app" href="huizuche://" class="label">立即打开ios&gt;&gt;</a>
+		<a href="huizuche://" class="label">立即打开ios&gt;&gt;</a>
 	</div>
 
 	<script>
 		(function () {
+
 			var ua = navigator.userAgent.toLowerCase();
 			var t;
 			var config = {
 				/*scheme:必须*/
-				scheme_IOS: 'will://',
+				scheme_IOS: 'huizuche://',
 				scheme_Adr: 'suhang://test/',
 				download_url: document.getElementById('J-download-app').value,
 				timeout: 600
@@ -52,6 +53,7 @@
 					clearTimeout(t);
 				}
 			}
+			openclient()
 			window.addEventListener("DOMContentLoaded", function () {
 				document.getElementById("J-call-app").addEventListener('click', openclient, false);
 			}, false);
