--- a/test.html
+++ b/test.html
@@ -44,7 +44,7 @@
 				var t = setTimeout(function () {
 					var endTime = Date.now();
 					if (!startTime || endTime - startTime < config.timeout + 200) {
-						window.location = config.download_url;
+						// window.location = config.download_url;
 					} else {
 
 					}
