--- a/test.html
+++ b/test.html
@@ -62,3 +62,33 @@
 </body>
 
 </html>
+
+<!--<!DOCTYPE html>
+<html lang="en" ng-app="testApp">
+
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+	<title>android or ios</title>
+	<link rel="stylesheet" href="./css/index.css">
+</head>
+
+<body ng-controller="testAppController">
+
+	<div class="wrap">
+		<div id="btn">点击测试浏览器环境</div>
+		<div ng-click="clickError()"></div>
+		<div class="form">
+			<input type="text" id="forminput">
+		</div>
+		<div class="tijiao" ng-click="tijiao()">点击提交</div>
+		<a href="">点击下载惠租车APP</a>
+	</div>
+
+
+	<script src="https://cdn.bootcss.com/jquery/2.2.4/jquery.js"></script>
+	<script src="https://cdn.bootcss.com/angular.js/1.6.0/angular.js"></script>
+	<script src="./js/index.js"></script>
+</body>
+
+</html>-->
