--- a/test.html
+++ b/test.html
@@ -10,6 +10,16 @@
 	<title>this's a demo</title>
 	<meta id="viewport" name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,minimal-ui">
 </head>
+<style>
+	textarea {
+		outline: none;
+	}
+
+	textarea:focus {
+		outline: none;
+		background: #fff;
+	}
+</style>
 
 <body>
 	<div>
@@ -22,7 +32,7 @@
 	<div>
 		<a href="huizuche://" class="label">立即打开ios&gt;&gt;</a>
 	</div>
-	<textarea name="" id="" cols="30" rows="3" onclick="this.select()">点击全选点击全选点击全选点击全选点击全选点击全选点击全选点击全选</textarea>
+	<textarea name="" id="" cols="30" rows="3" readonly="readonly" onclick="this.select()">点击全选点击全选点击全选点击全选点击全选点击全选点击全选点击全选</textarea>
 	<script>
 		(function () {
 
