--- a/test.html
+++ b/test.html
@@ -1,4 +1,25 @@
-<!doctype html>
+<html>
+<meta id="viewport" name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,minimal-ui">
+
+<head>
+	<script type="text/javascript">
+		function selText() {
+			document.getElementById("txt1").select()
+		}
+	</script>
+</head>
+
+<body>
+
+	<textarea id="txt1">Hello world....</textarea>
+	<input type="button" value="Select text" onclick="selText()">
+
+</body>
+
+</html>
+
+
+<!-- <!doctype html>
 <html>
 
 <head>
@@ -75,7 +96,7 @@
 	</script>
 </body>
 
-</html>
+</html> -->
 
 <!--<!DOCTYPE html>
 <html lang="en" ng-app="testApp">
