--- a/test.html
+++ b/test.html
@@ -29,10 +29,33 @@
 	<div>
 		<a href="huizuche://" class="label">立即打开ios&gt;&gt;</a>
 	</div>
-	<textarea name="" id="textarea" cols="30" rows="3" onclick="selText()">点击全选点击全选点击全选点击全选点击全选点击全选点击全选点击全选</textarea>
-	<input type="text" value="点击全选点击全选点击全选点击全选点击全选点击全选点击全选点击全选" onclick="this.select()">
+	<textarea name="" id="cc" cols="30" rows="3" onclick="">点击全选点击全选点击全选点击全选点击全选点击全选点击全选点击全选</textarea>
+	<input type="text" id="bb" value="点击全选点击全选点击全选点击全选点击全选点击全选点击全选点击全选" onclick="selectText('bb')">
+	<div id="aa" onclick="selectText('aa')">
+		xxxxxxxxxxxxxx<br /> xxxxxxxxxxxxxx
+		<br /> xxxxxxxxxxxxxx
+		<br /> xxxxxxxxxxxxxx
+		<br />
+	</div>
 
 	<script>
+		function selectText(element) {
+			var text = document.getElementById(element);
+			if (document.body.createTextRange) {
+				var range = document.body.createTextRange();
+				range.moveToElementText(text);
+				range.select();
+			} else if (window.getSelection) {
+				var selection = window.getSelection();
+				var range = document.createRange();
+				range.selectNodeContents(text);
+				selection.removeAllRanges();
+				selection.addRange(range);
+			} else {
+				alert("none");
+			}
+		}
+
 		function selText() {
 			var inputs = document.getElementById("textarea");
 			inputs.focus();
