--- a/test.html
+++ b/test.html
@@ -30,7 +30,7 @@
 		<a href="huizuche://" class="label">立即打开ios&gt;&gt;</a>
 	</div>
 	<textarea name="" id="cc" cols="30" rows="3" readonly onclick="SelectText('cc')">点击全选点击全选点击全选点击全选点击全选点击全选点击全选点击全选</textarea>
-	<input type="text" id="bb" value="点击全选点击全选点击全选点击全选点击全选点击全选点击全选点击全选" onclick="SelectText('bb')">
+	<input type="text" id="bb" readonly value="点击全选点击全选点击全选点击全选点击全选点击全选点击全选点击全选" onclick="SelectText('bb')">
 	<div id="aa">
 		xxxxxxxxxxxxxx<br /> xxxxxxxxxxxxxx
 		<br /> xxxxxxxxxxxxxx
