--- a/lie.html
+++ b/lie.html
@@ -7,14 +7,111 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>liePay</title>
 </head>
+<style>
+    .input-wrap {}
 
-<body style="margin:0;padding:0">
-    <img src="http://ota5i8p1g.bkt.clouddn.com/lie.jpg" width="100%" alt="">
+    .input-wrap img {
+        position: relative;
+    }
+
+    .input-wrap input {
+        outline: none;
+        border: none;
+        color: #333333;
+        position: absolute;
+        z-index: 10;
+        font-family: PingFang, helvetica, Arial, "Hiragino Sans GB", "Microsoft Yahei";
+    }
+
+    .name {
+        top: 20.5%;
+        left: 45.3%;
+        width: 21%;
+        height: 18px;
+        text-align: center;
+        font-size: 16px;
+    }
+
+    .price {
+        top: 31%;
+        left: 11%;
+        width: 72%;
+        height: 40px;
+        font-size: 40px;
+    }
+
+    button {
+        position: absolute;
+        top: 46%;
+        left: 0;
+        width: 100%;
+        height: 100px;
+        background: transparent;
+        border: none;
+        outline: none;
+    }
+
+    .sure-wrap {
+        display: none;
+    }
+
+    .sure-wrap img {
+        position: relative;
+    }
+
+    #surePrice {
+        position: absolute;
+        top: 19.28%;
+        right: 47%;
+        font-size: 40px;
+        color: #333;
+        z-index: 10;
+        font-family: PingFang, helvetica, Arial, "Hiragino Sans GB", "Microsoft Yahei";
+    }
+
+    #sureName {
+        position: absolute;
+        top: 35.3%;
+        left: 14%;
+        font-size: 14px;
+        color: #333;
+        z-index: 10;
+        height: 40px;
+        line-height: 40px;
+        font-family: PingFang, helvetica, Arial, "Hiragino Sans GB", "Microsoft Yahei";
+    }
+</style>
+
+<body style="margin:0;padding:0;background-color:#F4F5F9">
+    <div class="input-wrap" id="input-wrap">
+        <input type="text" class="name" id="name" value="">
+        <input type="text" class="price" id="price" value="">
+        <img src="http://ota5i8p1g.bkt.clouddn.com/payLie.jpg" width="100%" alt="">
+        <button onclick="onClick()"></button>
+    </div>
+    <div class="sure-wrap" id="sure-wrap">
+        <p id="surePrice">1212</p>
+        <p id="sureName">1212</p>
+        <img src="http://ota5i8p1g.bkt.clouddn.com/lie.jpg" width="100%" alt="">
+    </div>
+
 
     <script>
-        (function () {
-
-        })
+        var name = document.getElementById('name').value;
+        var price = document.getElementById('price').value;
+        var sureName = document.getElementById('sureName');
+        var surePrice = document.getElementById('surePrice');
+        var inputW = document.getElementById('input-wrap');
+        var sureW = document.getElementById('sure-wrap');
+        // function onChange() {
+        //     // console.log
+        // }
+        function onClick() {
+            sureName.innerHTML = document.getElementById('name').value;
+            surePrice.innerHTML = document.getElementById('price').value;
+            inputW.style.display = 'none';
+            sureW.style.display = 'block';
+        }
     </script>
 </body>
 
