--- a/lie.html
+++ b/lie.html
@@ -24,7 +24,7 @@
     }
 
     .name {
-        top: 20.5%;
+        top: 152px;
         left: 45.3%;
         width: 21%;
         height: 18px;
@@ -33,7 +33,7 @@
     }
 
     .price {
-        top: 31%;
+        top: 228px;
         left: 11%;
         width: 72%;
         height: 40px;
@@ -61,7 +61,7 @@
 
     #surePrice {
         position: absolute;
-        top: 19.28%;
+        top: 141px;
         right: 47%;
         font-size: 40px;
         color: #333;
@@ -71,7 +71,7 @@
 
     #sureName {
         position: absolute;
-        top: 35.3%;
+        top: 260px;
         left: 14%;
         font-size: 14px;
         color: #333;
@@ -90,8 +90,8 @@
         <button onclick="onClick()"></button>
     </div>
     <div class="sure-wrap" id="sure-wrap">
-        <p id="surePrice">1212</p>
-        <p id="sureName">1212</p>
+        <p id="surePrice"></p>
+        <p id="sureName"></p>
         <img src="http://ota5i8p1g.bkt.clouddn.com/lie.jpg" width="100%" alt="">
     </div>
 
