--- a/lie.html
+++ b/lie.html
@@ -82,7 +82,7 @@
     }
 </style>
 
-<body style="margin:0;padding:0;background-color:#F4F5F9">
+<body style="margin:0;padding:0;background-color:#F4F5F9;display:none">
     <div class="input-wrap" id="input-wrap">
         <input type="text" class="name" id="name" value="">
         <input type="text" class="price" id="price" value="">
