--- a/test.html
+++ b/test.html
@@ -31,6 +31,7 @@
 	</div>
 	<textarea name="" id="cc" cols="30" rows="3" readonly onclick="SelectText('cc')">点击全选点击全选点击全选点击全选点击全选点击全选点击全选点击全选</textarea>
 	<input type="text" id="bb" value="点击全选点击全选点击全选点击全选点击全选点击全选点击全选点击全选" onclick="SelectText('bb')">
+	<input type="text">
 	<div id="aa">
 		xxxxxxxxxxxxxx<br /> xxxxxxxxxxxxxx
 		<br /> xxxxxxxxxxxxxx
