--- a/test.html
+++ b/test.html
@@ -41,6 +41,7 @@
 
 	<script src="https://code.jquery.com/jquery-1.11.3.js"></script>
 	<script>
+		alert(navigator.userAgent)
 		function SelectText(name) {
 			var input = document.getElementById(name);
 			var len = input.value.length;
