--- a/demo.html
+++ b/demo.html
@@ -7,18 +7,136 @@
     <title>this's a demo</title>
     <meta id="viewport" name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 </head>
+<style>
+    .oval-wrap {
+        width: 50%;
+        height: 20px;
+        text-align: center;
+    }
+
+    .oval {
+        width: 100%;
+        height: 20px;
+        display: inline-block;
+        background-color: #41B883;
+        border-radius: 50%;
+        animation: bigSmall 1s infinite;
+        -webkit-animation: bigSmall 1s infinite;
+    }
+
+    @keyframes bigSmall {
+        0% {
+            width: 100%;
+            height: 20px;
+            opacity: 1;
+        }
+        80% {
+            width: 50%;
+            height: 10px;
+            opacity: 0;
+        }
+        100% {
+            width: 100%;
+            height: 20px;
+            opacity: 1;
+        }
+    }
+
+    @-webkit-keyframes bigSmall {
+        0% {
+            width: 100%;
+            height: 20px;
+            opacity: 1;
+        }
+        80% {
+            width: 50%;
+            height: 10px;
+            opacity: 0;
+        }
+        100% {
+            width: 100%;
+            height: 20px;
+            opacity: 1;
+        }
+    }
+
+    .vue-icon {
+        padding-bottom: 20px;
+        animation: upDown 1s infinite;
+        -webkit-animation: upDown 1s infinite;
+    }
+
+    @keyframes upDown {
+        0% {
+            transform: translateY(0)
+        }
+        80% {
+            transform: translateY(50px)
+        }
+        100% {
+            transform: translateY(0)
+        }
+    }
+
+    @-webkit-keyframes upDown {
+        0% {
+            transform: translateY(0)
+        }
+        80% {
+            transform: translateY(50px)
+        }
+        100% {
+            transform: translateY(0)
+        }
+    }
+
+    .circle {
+        animation: rotates 1s infinite alternate;
+        -webkit-animation: rotates 1s infinite alternate;
+        width: 40%;
+    }
+
+    @keyframes rotates {
+        0% {
+            -webkit-transform: rotate(0)
+        }
+        100% {
+            -webkit-transform: rotate(360deg)
+        }
+    }
+
+    @-webkit-keyframes rotates {
+        0% {
+            transform: rotate(0);
+            -webkit-transform: rotate(0)
+        }
+        100% {
+            transform: rotate(360deg);
+            -webkit-transform: rotate(360deg)
+        }
+    }
+</style>
 
 <body>
     <div>
+        <img class="vue-icon" width="50%" src="https://cn.vuejs.org/images/logo.png" alt="">
+        <div class="oval-wrap">
+            <div class="oval"></div>
+        </div>
+    </div>
+    <div>
+        <img class="circle" src="./img/timg.png" alt="">
+    </div>
+    <!-- <div>
         <a id="J-call-app" href="javascript:;" class="label">立即打开&gt;&gt;</a>
         <input id="J-download-app" type="hidden" name="storeurl" value="http://m.chanyouji.cn/apk/chanyouji-2.2.0.apk">
     </div>
     <div>
-        <a href="suhang://test/" class="label">立即打开android&gt;&gt;</a>
+        <a href="huizuche://" class="label">立即打开android&gt;&gt;</a>
     </div>
     <div>
         <a href="huizuche://" class="label">立即打开ios&gt;&gt;</a>
-    </div>
+    </div> -->
 
     <script src="https://code.jquery.com/jquery-1.11.3.js"></script>
     <script>
@@ -42,7 +160,7 @@
                 var t = setTimeout(function () {
                     var endTime = Date.now();
                     if (!startTime || endTime - startTime < config.timeout + 200) {
-                        window.location = config.download_url;
+                        // window.location = config.download_url;
                     } else {
 
                     }
