--- a/demo.html
+++ b/demo.html
@@ -108,7 +108,7 @@
             var config = {
                 /*scheme:必须*/
                 scheme_IOS: 'huizuche://',
-                scheme_Adr: 'suhang://test/',
+                scheme_Adr: 'huizuche://',
                 download_url: document.getElementById('J-download-app').value,
                 timeout: 600
             };
@@ -121,7 +121,7 @@
                 var t = setTimeout(function () {
                     var endTime = Date.now();
                     if (!startTime || endTime - startTime < config.timeout + 200) {
-                        // window.location = config.download_url;
+                        window.location = config.scheme_IOS;
                     } else {
 
                     }
