--- a/demo.html
+++ b/demo.html
@@ -116,15 +116,10 @@
                 ifr.src = ua.indexOf('os') > 0 ? config.scheme_IOS : config.scheme_Adr;
                 ifr.style.display = 'none';
                 document.body.appendChild(ifr);
-                try {
-                    window.location = config.scheme_IOS;
-                } catch (error) {
+                // window.location = config.scheme_IOS;
+                window.setTimeout(function () {
                     window.location.href = "https://itunes.apple.com/cn/app/id995915747";
-                }
-
-                // window.setTimeout(function () {
-                //     window.location.href = "https://itunes.apple.com/cn/app/id995915747";
-                // }, 2000)
+                }, 2000)
             }
             openclient()
             window.addEventListener("DOMContentLoaded", function () {
