--- a/demo.html
+++ b/demo.html
@@ -117,10 +117,10 @@
         document.body.appendChild(ifr);
 
         // window.location.href = 'huizuche://';
-        // window.setTimeout(function () {
-        //     document.body.removeChild(ifr);
-        //     window.location.href = "https://itunes.apple.com/cn/app/id995915747";
-        // }, 2000)
+        window.setTimeout(function () {
+            document.body.removeChild(ifr);
+            window.location.href = "https://itunes.apple.com/cn/app/id995915747";
+        }, 2000)
 
     </script>
 </body>
