--- a/demo.html
+++ b/demo.html
@@ -100,27 +100,40 @@
 
     <script src="https://code.jquery.com/jquery-1.11.3.js"></script>
     <script>
-        var ua = navigator.userAgent.toLowerCase();
-        var t;
-        var config = {
-            /*scheme:必须*/
-            scheme_IOS: 'huizuche://',
-            scheme_Adr: 'huizuche://',
-            timeout: 600
-        };
 
-        // 通过iframe的方式试图打开APP，如果能正常打开，会直接切换到APP，并自动阻止js其他行为
-
-        var ifr = document.createElement('iframe');
-        ifr.src = 'huizuche://';//打开app的协议，有app同事提供
-        ifr.style.display = 'none';
-        document.body.appendChild(ifr);
-
-        // window.location.href = 'huizuche://';
+        var loadDateTime = new Date();
         window.setTimeout(function () {
-            document.body.removeChild(ifr);
-            window.location.href = "https://itunes.apple.com/cn/app/id995915747";
-        }, 2000)
+            var timeOutDateTime = new Date();
+            if (timeOutDateTime - loadDateTime < 5000) {
+                window.location = "https://itunes.apple.com/cn/app/id995915747";//ios下载地址  
+            } else {
+                window.close();
+            }
+        }, 2000);
+        window.location = "huizuche://";
+
+
+        // var ua = navigator.userAgent.toLowerCase();
+        // var t;
+        // var config = {
+        //     /*scheme:必须*/
+        //     scheme_IOS: 'huizuche://',
+        //     scheme_Adr: 'huizuche://',
+        //     timeout: 600
+        // };
+
+        // // 通过iframe的方式试图打开APP，如果能正常打开，会直接切换到APP，并自动阻止js其他行为
+
+        // var ifr = document.createElement('iframe');
+        // ifr.src = 'huizuche://';//打开app的协议，有app同事提供
+        // ifr.style.display = 'none';
+        // document.body.appendChild(ifr);
+
+        // // window.location.href = 'huizuche://';
+        // window.setTimeout(function () {
+        //     document.body.removeChild(ifr);
+        //     window.location.href = "https://itunes.apple.com/cn/app/id995915747";
+        // }, 2000)
 
     </script>
 </body>
