--- a/demo.html
+++ b/demo.html
@@ -101,16 +101,43 @@
     <script src="https://code.jquery.com/jquery-1.11.3.js"></script>
     <script>
 
-        var loadDateTime = new Date();
-        window.setTimeout(function () {
-            var timeOutDateTime = new Date();
-            if (timeOutDateTime - loadDateTime < 5000) {
-                window.location = "https://itunes.apple.com/cn/app/id995915747";//ios下载地址  
-            } else {
-                window.close();
-            }
-        }, 2000);
-        window.location = "huizuche://";
+        function testApp(url) {
+            var timeout, t = 1000, hasApp = true;
+            setTimeout(function () {
+                if (hasApp) {
+                    alert('安装了app');
+                } else {
+                    alert('未安装app');
+                }
+                document.body.removeChild(ifr);
+            }, 2000)
+
+            var t1 = Date.now();
+            var ifr = document.createElement("iframe");
+            ifr.setAttribute('src', url);
+            ifr.setAttribute('style', 'display:none');
+            document.body.appendChild(ifr);
+            timeout = setTimeout(function () {
+                var t2 = Date.now();
+                if (!t1 || t2 - t1 < t + 100) {
+                    hasApp = false;
+                }
+            }, t);
+        }
+
+        testApp('huizuche://')
+
+
+        // var loadDateTime = new Date();
+        // window.setTimeout(function () {
+        //     var timeOutDateTime = new Date();
+        //     if (timeOutDateTime - loadDateTime < 5000) {
+        //         window.location = "https://itunes.apple.com/cn/app/id995915747";//ios下载地址  
+        //     } else {
+        //         window.close();
+        //     }
+        // }, 2000);
+        // window.location = "huizuche://";
 
 
         // var ua = navigator.userAgent.toLowerCase();
