--- a/demo.html
+++ b/demo.html
@@ -106,7 +106,8 @@
             window.setTimeout(function () {
                 var timeOutDateTime = new Date();
                 if (timeOutDateTime - loadDateTime < 5000) {
-                    window.location.href = "https://itunes.apple.com/cn/app/id995915747";
+                    // window.location.href = "https://itunes.apple.com/cn/app/id995915747";
+                    window.location = "http://a.app.qq.com/o/simple.jsp?pkgname=com.huizuche.app";
                 } else {
                     window.close();
                 }
