--- a/demo.html
+++ b/demo.html
@@ -105,7 +105,7 @@
         <font color="red">打开 APPSTORE</font>
         <br />
         <a href="newsapp://doc/8A7OMFOJ00014JB6"></a>
-        <a id="toAPP" onClick="javascript:try_to_open_app();" href="newsapp://doc/8A7OMFOJ00014JB6">打开网易新闻</a>
+        <a id="toAPP" onClick="javascript:try_to_open_app();" href="huizuche://">打开网易新闻</a>
     </div>
 
     <script src="https://code.jquery.com/jquery-1.11.3.js"></script>
@@ -115,8 +115,8 @@
 
         function try_to_open_app() {
             timeout = setTimeout(function () {
-                window.location = 'http://itunes.apple.com/cn/app/id425349261?mt=8';
-            }, 300);
+                window.location = 'https://itunes.apple.com/cn/app/id995915747';
+            }, 500);
         }
 
         document.getElementById("toAPP").attachEvent("onclick", try_to_open_app());
