--- a/demo.html
+++ b/demo.html
@@ -119,7 +119,7 @@
             }, 300);
         }
 
-        document.getElementById("toAPP").addEventListener("onclick", try_to_open_app())
+        $("#toAPP").trigger("click")
 
         // if (navigator.userAgent.match(/(iPhone|iPod|iPad);?/i)) {
         //     var loadDateTime = new Date();
