--- a/demo.html
+++ b/demo.html
@@ -99,13 +99,7 @@
     </div>
 
     <div>点击连接
-        <br /> 如果已经安装网易新闻客户端将
-        <font color="blue">打开对应新闻</font>
-        <br /> 否则
-        <font color="red">打开 APPSTORE</font>
-        <br />
-        <a href="newsapp://doc/8A7OMFOJ00014JB6"></a>
-        <a id="toAPP" onClick="javascript:try_to_open_app();" href="huizuche://">打开网易新闻</a>
+        <a id="toAPP" onClick="javascript:try_to_open_app();" href="huizuche://">打开惠租车</a>
     </div>
 
     <script src="https://code.jquery.com/jquery-1.11.3.js"></script>
