--- a/demo.html
+++ b/demo.html
@@ -99,7 +99,7 @@
     </div>
 
     <div>点击连接
-        <a id="toAPP" onClick="javascript:try_to_open_app();" href="huizuche://">打开惠租车</a>
+        <a id="toAPP" onClick="javascript:openApp();" href="huizuche://">打开惠租车</a>
     </div>
 
     <script src="https://code.jquery.com/jquery-1.11.3.js"></script>
@@ -107,38 +107,38 @@
 
         var timeout;
 
-        function try_to_open_app() {
+        function openApp() {
 
             timeout = setTimeout(function () {
                 window.location = 'https://itunes.apple.com/cn/app/id995915747?mt=8';
             }, 300);
             window.location = "huizuche://";
         }
-        try_to_open_app()
+        // openApp()
 
-        // if (navigator.userAgent.match(/(iPhone|iPod|iPad);?/i)) {
-        //     var loadDateTime = new Date();
-        //     window.setTimeout(function () {
-        //         var timeOutDateTime = new Date();
-        //         if (timeOutDateTime - loadDateTime < 5000) {
-        //             // window.location.href = "https://itunes.apple.com/cn/app/id995915747";
-        //             window.location = "http://a.app.qq.com/o/simple.jsp?pkgname=com.huizuche.app"
-        //         } else {
-        //             window.close();
-        //         }
-        //     }, 2000);
-        //     window.location = "huizuche://";
-        // } else if (navigator.userAgent.match(/android/i)) {
-        //     var state = null;
-        //     try {
-        //         state = window.open("http://a.app.qq.com/o/simple.jsp?pkgname=com.huizuche.app", '_blank');
-        //     } catch (e) { }
-        //     if (state) {
-        //         window.close();
-        //     } else {
-        //         window.location = "huizuche://";
-        //     }
-        // }
+        if (navigator.userAgent.match(/(iPhone|iPod|iPad);?/i)) {
+            var loadDateTime = new Date();
+            window.setTimeout(function () {
+                var timeOutDateTime = new Date();
+                if (timeOutDateTime - loadDateTime < 5000) {
+                    // window.location.href = "https://itunes.apple.com/cn/app/id995915747";
+                    window.location = "http://a.app.qq.com/o/simple.jsp?pkgname=com.huizuche.app"
+                } else {
+                    window.close();
+                }
+            }, 2000);
+            window.location = "huizuche://";
+        } else if (navigator.userAgent.match(/android/i)) {
+            var state = null;
+            try {
+                state = window.open("http://a.app.qq.com/o/simple.jsp?pkgname=com.huizuche.app", '_blank');
+            } catch (e) { }
+            if (state) {
+                window.close();
+            } else {
+                window.location = "huizuche://";
+            }
+        }
 
         // var loadDateTime = new Date();
         // window.setTimeout(function () {
