--- a/demo.html
+++ b/demo.html
@@ -108,11 +108,10 @@
         var timeout;
 
         function openApp() {
-
+            window.location.href = "huizuche://";
             timeout = setTimeout(function () {
-                window.location = 'https://itunes.apple.com/cn/app/id995915747?mt=8';
+                window.location.href = 'https://itunes.apple.com/cn/app/id995915747?mt=8';
             }, 300);
-            window.location = "huizuche://";
         }
         openApp()
 
