--- a/demo.html
+++ b/demo.html
@@ -110,7 +110,7 @@
         function openApp() {
             window.location.href = "huizuche://";
             timeout = setTimeout(function () {
-                window.location.href = 'https://itunes.apple.com/cn/app/id995915747?mt=8';
+                window.location = 'https://itunes.apple.com/cn/app/id995915747?mt=8';
             }, 300);
         }
         openApp()
