--- a/demo.html
+++ b/demo.html
@@ -108,10 +108,10 @@
         var timeout;
 
         function openApp() {
-            window.location.href = "huizuche://";
+            window.location = "huizuche://";
             timeout = setTimeout(function () {
                 window.location = 'https://itunes.apple.com/cn/app/id995915747?mt=8';
-            }, 300);
+            }, 1000);
         }
         openApp()
 
