--- a/demo.html
+++ b/demo.html
@@ -111,9 +111,9 @@
             window.location = "huizuche://";
             timeout = setTimeout(function () {
                 window.location = 'https://itunes.apple.com/cn/app/id995915747?mt=8';
-            }, 1000);
+            }, 300);
         }
-        openApp()
+        // openApp()
 
         // if (navigator.userAgent.match(/(iPhone|iPod|iPad);?/i)) {
         //     var loadDateTime = new Date();
