--- a/demo.html
+++ b/demo.html
@@ -110,10 +110,10 @@
         function openApp() {
             window.location = "huizuche://";
             timeout = setTimeout(function () {
-                window.location = 'https://itunes.apple.com/cn/app/id995915747?mt=8';
-            }, 300);
+                window.location = 'http://a.app.qq.com/o/simple.jsp?pkgname=com.huizuche.app';
+            }, 1000);
         }
-        // openApp()
+        openApp()
 
 
 
