--- a/demo.html
+++ b/demo.html
@@ -110,10 +110,22 @@
         function openApp() {
             window.location = "huizuche://";
             timeout = setTimeout(function () {
-                window.location = 'http://a.app.qq.com/o/simple.jsp?pkgname=com.huizuche.app';
+                window.location = 'https://itunes.apple.com/cn/app/id995915747';
             }, 1000);
         }
         openApp()
+
+
+    // var timeout;
+
+    // function openApp() {
+    //     window.location = "huizuche://openType=H5&url=";
+    //     timeout = setTimeout(function () {
+    //         window.location = 'https://itunes.apple.com/cn/app/id995915747';
+    //     }, 1000);
+    // }
+    // openApp()
+    // //setTimeout(openApp, 1000);
 
 
 
